--- a/index.html
+++ b/index.html
@@ -1,11 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>cv</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="assets/favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
     
+  </head>
+<body>
+    <div class="wrapper">
+        <div class="header">
+            <div class="container">
+                <div class="nav">
+                    <ul class="nav-list">
+                      <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+                      <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
+                      <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+                      <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
+                      <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
+                      <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+                      <li class="nav-item"><a href="#english" class="nav-link">English</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+      <div class="sasha">
+        <div class="container">
+            <div class="sasha__row">
+                <div class="sasha__image">
+                    <img src="assets/img/photo_2023-07-27_15-02-40(2).jpg" alt="">
+                </div>
+                <div class="sasha__title">
+                    <div class="sasha__name">
+                        <h1>Sasha Zakharanka</h1></div>
+                        <div class="sasha__underline">_________________</div>
+                    <div class="sasha__skills">
+                        <h3>FRONT-END DEVELOPER</h3></div>
+                </div>
+             </div>
+         </div>
+      </div>
+      <div class="block">
+        <div class="container">
+            <div class="block__row">fff</div>
+        </div>
+      </div>
+      <div class="main">
+        <div class="container">
+            <div class="main__row">
+               <div class="main__title">
+                <div class="main__contacts">CONTACTS</div>
+                <ul class="main__list">
+                    <li>Minsk, Belarus</li>
+                    <li>Email:zaharenko.aleksandra1@yandex.by</li>
+                    <li>Github:SashaZakharanka</li>
+                    <li>Discord:SashaZakharanka</li>
+                </ul>
+              </div>
+              <div class="main__title2">SUMMARY</div>
+            </div>
+          </div>
+        </div>
+    </div>
+    <footer class="footer">
+        <div class="container">
+         <div class="footer__row">
+            <div class="footer__text">©2023</div>
+            <div class="footer__text2">
+                <a href="https://github.com/SashaZakharanka">SashaZakharanka</a>
+            </div>
+            <div class="footer__image">
+              <a href="https://rs.school/js/"><img src="assets/img/rs_school_js.svg" alt=""></a>
+           </div>
+         </div>
+      </div>
+    </footer>
 </body>
 </html>
