implement: adding new blocks, styles

--- a/index.html
+++ b/index.html
@@ -52,26 +52,119 @@
                <div class="main__title">
                 <div class="main__contacts">CONTACTS</div>
                 <ul class="main__list">
-                    <li>Minsk, Belarus</li>
-                    <li>Email:zaharenko.aleksandra1@yandex.by</li>
-                    <li>Github:SashaZakharanka</li>
-                    <li>Discord:SashaZakharanka</li>
+                    <li><img src="assets/img/location-sign.svg" alt="">  Minsk, Belarus</li>
+                    <li><img src="assets/img/email.svg" alt="">  Email: <span>zaharenko.aleksandra1@yandex.by</span></li>
+                    <li><img src="assets/img/github-svgrepo-com.svg" alt="">  Github: <span>SashaZakharanka</span></li>
+                    <li><img src="assets/img/discord_1.svg" alt="">  Discord: <span>SashaZakharanka</span></li>
                 </ul>
               </div>
-              <div class="main__title2">SUMMARY</div>
+              <div class="main__title2">
+                <div class="summary"> SUMMARY</div>
+                <div class="summary2">
+                  <p>I like learning new things as a hobby: photography, filming 
+                    and editing,confectionery. 
+                    <br>Now I study programming and English. I want to completely change my profession.</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-    </div>
-    <footer class="footer">
+        <div class="block2">
+          <div class="container">
+            <div class="block2__row">
+              <div class="block2__title">fff</div>
+              <div class="block2__title2">fff</div>
+            </div>
+          </div>
+        </div>
+        <div class="main2">
+          <div class="container">
+              <div class="main2__row">
+                 <div class="main2__title">
+                  <div class="main2__skills">SKILLS</div>
+                  <ul class="main2__list">
+                      <li><img src="assets/img/square-thin.svg" alt="">  Web-development: <span>HTML, CSS, SCSS</span></li>
+                      <li><img src="assets/img/square-thin.svg" alt="">  Version control: <span>Git, Github</span></li>
+                      <li><img src="assets/img/square-thin.svg" alt="">  Work examles:: <span>Project CV</span></li>
+                  </ul>
+                </div>
+                <div class="main2__title2">
+                  <div class="code">CODE</div>
+                  <div class="code2">
+  <pre>
+<code>
+function nouveau(Constructor, ...args) {
+  let obj = Object.create(Constructor.prototype)
+  let ret = Constructor.apply(obj, args)
+  return ret !== null && (typeof ret === 'object' <br>  || typeof ret === 'function') ? ret : obj
+}
+ </code>
+   </pre>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="block3">
+            <div class="container">
+              <div class="block3__row">
+                <div class="block3__title">fff</div>
+                <div class="block3__title2">fff</div>
+              </div>
+            </div>
+          </div>
+          <div class="main3">
+            <div class="container">
+                <div class="main3__row">
+                   <div class="main3__title">
+                    <div class="main3__courses">COURSES</div>
+                    <ul class="main3__list">
+                        <li> RS School</li>
+                    </ul>
+                  </div>
+                  <div class="main3__title2">
+                    <div class="projects">PROJECTS</div>
+                    <div class="projects2"><span>Work examles:</span> Project CV</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="block4">
+              <div class="container">
+                <div class="block4__row">
+                  <div class="block4__title">fff</div>
+                  <div class="block4__title2">fff</div>
+                </div>
+              </div>
+            </div>
+            <div class="main4">
+              <div class="container">
+                  <div class="main4__row">
+                     <div class="main4__title">
+                      <div class="main4__education">EDUCATION</div>
+                      <ul class="main4__list">
+                          <li>  Belarusion State Academy of Music</li>
+                      </ul>
+                    </div>
+                    <div class="main4__title2">
+                      <div class="english">ENGLISH</div>
+                      <div class="english2"><span>Work examles:</span> Level A1</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+           </div>   
+        <footer class="footer">
         <div class="container">
          <div class="footer__row">
             <div class="footer__text">©2023</div>
             <div class="footer__text2">
-                <a href="https://github.com/SashaZakharanka">SashaZakharanka</a>
+                <a target="_blank" href="https://github.com/SashaZakharanka">SashaZakharanka</a>
             </div>
             <div class="footer__image">
-              <a href="https://rs.school/js/"><img src="assets/img/rs_school_js.svg" alt=""></a>
+              <a target="_blank" href="https://rs.school/j">
+                <img src="assets/img/rs_school_js.svg" alt="">
+              </a>
            </div>
          </div>
       </div>
