--- a/index.html
+++ b/index.html
@@ -10,47 +10,47 @@
   </head>
 <body>
     <div class="wrapper">
-        <div class="header">
+        <header class="header">
             <div class="container">
-                <div class="nav">
+                <nav class="nav">
                     <ul class="nav-list">
-                      <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
-                      <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
-                      <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
-                      <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
+                      <li class="nav-item"><a href="#CONTACTS" class="nav-link">Contacts</a></li>
+                      <li class="nav-item"><a href="#SUMMARY" class="nav-link">Summary</a></li>
+                      <li class="nav-item"><a href="#SKILLS" class="nav-link">Skills</a></li>
+                      <li class="nav-item"><a href="#CODE" class="nav-link">Code</a></li>
                       <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
                       <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
                       <li class="nav-item"><a href="#english" class="nav-link">English</a></li>
                     </ul>
-                </div>
+                  </nav>
             </div>
-        </div>
-      <div class="sasha">
-        <div class="container">
-            <div class="sasha__row">
-                <div class="sasha__image">
+        </header>
+        <main class="sasha">
+          <div class="container">
+              <div class="sasha__row">
+                <div class="sasha__image image">
                     <img src="assets/img/photo_2023-07-27_15-02-40(2).jpg" alt="">
                 </div>
-                <div class="sasha__title">
+                <div class="sasha__title title">
                     <div class="sasha__name">
                         <h1>Sasha Zakharanka</h1></div>
                         <div class="sasha__underline">_________________</div>
-                    <div class="sasha__skills">
-                        <h3>FRONT-END DEVELOPER</h3></div>
-                </div>
+                        <div class="sasha__skills">
+                        <h3>FRONT-END DEVELOPER</h3>
+                      </div>
+                    </div>
+                 </div>
              </div>
-         </div>
-      </div>
-      <div class="block">
-        <div class="container">
-            <div class="block__row">fff</div>
+              <div class="block">
+            <div class="container">
+              <div class="block__row">fff</div>
+           </div>
         </div>
-      </div>
-      <div class="main">
-        <div class="container">
+        <div class="main">
+          <div class="container">
             <div class="main__row">
                <div class="main__title">
-                <div class="main__contacts">CONTACTS</div>
+                <div class="main__contacts" id="CONTACTS">CONTACTS</div>
                 <ul class="main__list">
                     <li><img src="assets/img/location-sign.svg" alt="">  Minsk, Belarus</li>
                     <li><img src="assets/img/email.svg" alt="">  Email: <span>zaharenko.aleksandra1@yandex.by</span></li>
@@ -58,12 +58,13 @@
                     <li><img src="assets/img/discord_1.svg" alt="">  Discord: <span>SashaZakharanka</span></li>
                 </ul>
               </div>
-              <div class="main__title2">
-                <div class="summary"> SUMMARY</div>
+              <div class="main__title1">ppppppppppppppppppppppppppppppppppppppppppppppppppppppppp</div>
+              <div class="main__title2 title2">
+                <div class="summary" id="SUMMARY"> SUMMARY</div>
                 <div class="summary2">
-                  <p>I like learning new things as a hobby: photography, filming 
+                  <p>I like learning new things as a hobby: photography, <br>filming 
                     and editing,confectionery. 
-                    <br>Now I study programming and English. I want to completely change my profession.</p>
+                    <br>Now I study programming and English. I want to completely <br>change my profession.</p>
                 </div>
               </div>
             </div>
@@ -81,15 +82,16 @@
           <div class="container">
               <div class="main2__row">
                  <div class="main2__title">
-                  <div class="main2__skills">SKILLS</div>
+                  <div class="main2__skills" id="SKILLS">SKILLS</div>
                   <ul class="main2__list">
                       <li><img src="assets/img/square-thin.svg" alt="">  Web-development: <span>HTML, CSS, SCSS</span></li>
                       <li><img src="assets/img/square-thin.svg" alt="">  Version control: <span>Git, Github</span></li>
                       <li><img src="assets/img/square-thin.svg" alt="">  Work examles:: <span>Project CV</span></li>
                   </ul>
                 </div>
-                <div class="main2__title2">
-                  <div class="code">CODE</div>
+                <div class="main2__title1">ppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppp</div>
+                <div class="main2__title2 title2">
+                  <div class="code" id="CODE">CODE</div>
                   <div class="code2">
   <pre>
 <code>
@@ -118,12 +120,12 @@ function nouveau(Constructor, ...args) {
                 <div class="main3__row">
                    <div class="main3__title">
                     <div class="main3__courses">COURSES</div>
-                    <ul class="main3__list">
+                     <ul class="main3__list">
                         <li> RS School</li>
-                    </ul>
+                     </ul>
                   </div>
                   <div class="main3__title2">
-                    <div class="projects">PROJECTS</div>
+                    <div class="projects" id="projects">PROJECTS</div>
                     <div class="projects2"><span>Work examles:</span> Project CV</div>
                   </div>
                 </div>
@@ -141,19 +143,20 @@ function nouveau(Constructor, ...args) {
               <div class="container">
                   <div class="main4__row">
                      <div class="main4__title">
-                      <div class="main4__education">EDUCATION</div>
+                      <div class="main4__education" id="education">EDUCATION</div>
                       <ul class="main4__list">
-                          <li>  Belarusion State Academy of Music</li>
+                          <li>Belarusion State Academy of Music</li>
                       </ul>
                     </div>
                     <div class="main4__title2">
-                      <div class="english">ENGLISH</div>
+                      <div class="english" id="english">ENGLISH</div>
                       <div class="english2"><span>Work examles:</span> Level A1</div>
                     </div>
                   </div>
                 </div>
-              </div>
-           </div>   
+             </div>
+          </main>
+        </div>   
         <footer class="footer">
         <div class="container">
          <div class="footer__row">
