implement: added improvements in adaptive layout

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <div class="container">
                 <nav class="nav">
                     <ul class="nav-list">
-                      <li class="nav-item"><a href="#CONTACTS" class="nav-link">Contacts</a></li>
-                      <li class="nav-item"><a href="#SUMMARY" class="nav-link">Summary</a></li>
-                      <li class="nav-item"><a href="#SKILLS" class="nav-link">Skills</a></li>
-                      <li class="nav-item"><a href="#CODE" class="nav-link">Code</a></li>
+                      <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+                      <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
+                      <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+                      <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
                       <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
                       <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
                       <li class="nav-item"><a href="#english" class="nav-link">English</a></li>
@@ -50,7 +50,7 @@
           <div class="container">
             <div class="main__row">
                <div class="main__title">
-                <div class="main__contacts" id="CONTACTS">CONTACTS</div>
+                <div class="main__contacts" id="contacts">CONTACTS</div>
                 <ul class="main__list">
                     <li><img src="assets/img/location-sign.svg" alt="">  Minsk, Belarus</li>
                     <li><img src="assets/img/email.svg" alt="">  Email: <span>zaharenko.aleksandra1@yandex.by</span></li>
@@ -58,9 +58,9 @@
                     <li><img src="assets/img/discord_1.svg" alt="">  Discord: <span>SashaZakharanka</span></li>
                 </ul>
               </div>
-              <div class="main__title1">ppppppppppppppppppppppppppppppppppppppppppppppppppppppppp</div>
-              <div class="main__title2 title2">
-                <div class="summary" id="SUMMARY"> SUMMARY</div>
+             
+              <div class="main__title2 title3">
+                <div class="summary" id="summary"> SUMMARY</div>
                 <div class="summary2">
                   <p>I like learning new things as a hobby: photography, <br>filming 
                     and editing,confectionery. 
@@ -82,16 +82,16 @@
           <div class="container">
               <div class="main2__row">
                  <div class="main2__title">
-                  <div class="main2__skills" id="SKILLS">SKILLS</div>
+                  <div class="main2__skills" id="skills">SKILLS</div>
                   <ul class="main2__list">
                       <li><img src="assets/img/square-thin.svg" alt="">  Web-development: <span>HTML, CSS, SCSS</span></li>
                       <li><img src="assets/img/square-thin.svg" alt="">  Version control: <span>Git, Github</span></li>
                       <li><img src="assets/img/square-thin.svg" alt="">  Work examles:: <span>Project CV</span></li>
                   </ul>
                 </div>
-                <div class="main2__title1">ppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppp</div>
-                <div class="main2__title2 title2">
-                  <div class="code" id="CODE">CODE</div>
+               
+                <div class="main2__title2 title4">
+                  <div class="code" id="code">CODE</div>
                   <div class="code2">
   <pre>
 <code>
@@ -124,7 +124,7 @@ function nouveau(Constructor, ...args) {
                         <li> RS School</li>
                      </ul>
                   </div>
-                  <div class="main3__title2">
+                  <div class="main3__title2 title5">
                     <div class="projects" id="projects">PROJECTS</div>
                     <div class="projects2"><span>Work examles:</span> Project CV</div>
                   </div>
@@ -148,9 +148,9 @@ function nouveau(Constructor, ...args) {
                           <li>Belarusion State Academy of Music</li>
                       </ul>
                     </div>
-                    <div class="main4__title2">
+                    <div class="main4__title2 title6">
                       <div class="english" id="english">ENGLISH</div>
-                      <div class="english2"><span>Work examles:</span> Level A1</div>
+                      <div class="english2"><span>Work examles:</span> Level A2</div>
                     </div>
                   </div>
                 </div>
